Final testing tweaks after inspection on different devices showed issue with spacing of social icons

--- a/css/main.css
+++ b/css/main.css
@@ -214,7 +214,7 @@ textarea {
     margin: 0;
   }
 
-  .footer content-wrapper {
+  footer .content-wrapper {
     width: 55%;
     margin: 50px 0;
   }
@@ -227,7 +227,6 @@ textarea {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 0 120px;
   }
 
   footer .social-icons p {
